# ai-course10

./: README.md  main.py  pyproject.toml
giminimcp/: client-simple.py  server.py
gradiomcp/: client.py  gradiotest.py  mcpclient.py  server.py
gradiomcp/data/: kb.json
llmagent/: autogentest.py  cameltest_.py  crewaitest.py  langchaintest_.py  metagpttest_.py
openai/: client.py  server.py
openaimcp/: client-simple.py  client.py  server.py
simplemcp/: client_sse.py  client_stdio.py  server.py
