[project]
name = "ai-course10"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.37.0",
    "google-generativeai>=0.8.5",
    "ipykernel>=6.29.5",
    "lancedb>=0.23.0",
    "mcp[cli]>=1.9.4",
    "openai>=1.88.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "streamlit>=1.45.1",
    "tiktoken>=0.9.0",
]
